# focus-timer

./: CONTRIBUTING.md  NEWS  README.md  io.github.focustimerhq.FocusTimer.Devel.json  meson.build
data/: io.github.focustimerhq.FocusTimer.metainfo.xml.in  io.github.focustimerhq.FocusTimer.xml
data/sounds/: CREDITS  meson.build
po/: eo.po  focus-timer.pot  id.po  ka.po  lt.po  pl.po  ru.po  sv.po  ta.po
src/: application.vala  dbus-services.vala  io.github.focustimerhq.FocusTimer.gresource.xml  meson.build
src/core/: background-manager.vala  desktop-extension.vala  idle-monitor.vala  interfaces.vala  keyboard-manager.vala  lock-screen.vala  meson.build  notification-backend.vala  notification-manager.vala  priority.vala  provided-object.vala  provider-set.vala  screen-overlay-manager.vala  screen-saver.vala  session-manager-action-group.vala  session-manager.vala  sleep-monitor.vala  sound.vala  timer-action-group.vala  timezone-monitor.vala  utils.vala
src/integrations/gnome/: desktop-extension-settings.vala  interfaces.vala  preferences.vala
src/plugins/: meson.build
src/plugins/freedesktop/: freedesktop.gresource.xml  freedesktop.plugin  freedesktop.vala  meson.build  notification-backend-provider.vala
src/plugins/gnome/: application-extension.vala  desktop-extension-provider.vala  gnome.gresource.xml  gnome.plugin  gnome.vala  install-extension-dialog.ui  install-extension-dialog.vala  interfaces.vala  meson.build  preferences-window-extension.vala  preferences.vala  screen-overlay-provider.vala  shell-extension.vala  window-extension.vala
src/plugins/portal/: meson.build  portal.gresource.xml  portal.plugin  portal.vala
src/ui/: interfaces.vala
src/ui/main/: window.vala
src/ui/main/dialogs/: about-dialog.vala
src/ui/overlays/: lightbox.vala
src/ui/preferences/: preferences-window.vala
src/ui/preferences/appearance/: preferences-panel-appearance.ui  preferences-panel-appearance.vala
src/ui/preferences/automation/: preferences-panel-automation.ui  preferences-panel-automation.vala
src/ui/preferences/automation/action/: action-listboxrow.vala
src/ui/preferences/keyboard-shortcuts/: preferences-panel-keyboard-shortcuts.ui  preferences-panel-keyboard-shortcuts.vala
src/ui/preferences/notifications/: preferences-panel-notifications.ui  preferences-panel-notifications.vala
src/ui/preferences/sounds/: preferences-panel-sounds.ui  preferences-panel-sounds.vala
src/ui/preferences/timer/: preferences-panel-timer.ui  preferences-panel-timer.vala
src/ui/preferences/timer/widgets/: log-scale-row.ui
tests/: meson.build  test-notification-manager.vala  test-session-manager.vala
