libft_core_sources = files(
  'action.vala',
  'action-list-model.vala',
  'action-manager.vala',
  'background-manager.vala',
  'command.vala',
  'context.vala',
  'cycle.vala',
  'database.vala',
  'date-utils.vala',
  'event-producer.vala',
  'event.vala',
  'event-bus.vala',
  'expression.vala',
  'expression-parser.vala',
  'gap.vala',
  'gap-entry.vala',
  'idle-monitor.vala',
  'interfaces.vala',
  'job-queue.vala',
  'keyboard-manager.vala',
  'locale.vala',
  'lock-screen.vala',
  'logger.vala',
  'matrix.vala',
  'notification-backend.vala',
  'notification-manager.vala',
  'priority.vala',
  'provided-object.vala',
  'provider.vala',
  'provider-set.vala',
  'scheduler.vala',
  'screen-overlay-manager.vala',
  'screen-saver.vala',
  'session.vala',
  'session-entry.vala',
  'session-manager.vala',
  'session-manager-action-group.vala',
  'settings.vala',
  'sleep-monitor.vala',
  'sound-manager.vala',
  'sound.vala',
  'state.vala',
  'stats-entry.vala',
  'stats-manager.vala',
  'time-block.vala',
  'time-block-entry.vala',
  'timer.vala',
  'timer-action-group.vala',
  'timestamp.vala',
  'timezone-entry.vala',
  'timezone-history.vala',
  'timezone-monitor.vala',
  'utils.vala',
  'variables.vala',
)

libft_core = static_library(
  'ft_core',
  libft_core_sources,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    libm_dep,
    peas_dep,
    sqlite_dep,
    gstreamer_dep,
    posix_dep,
    json_dep,
  ],
  include_directories: config_h_dir,
)

libft_core_dep = declare_dependency(
  link_with: libft_core,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    peas_dep,
    gstreamer_dep,
    posix_dep,
  ],
  include_directories: [
    include_directories('.'),
  ],
)
